--- a/app/templates/admin/dashboard.html
+++ b/app/templates/admin/dashboard.html
@@ -5,7 +5,7 @@
         <h3>Usuarios recientes</h3>
         <ul>
             {% for u in users %}
-            <li>{{ u.username }} <small>{{ u.email }}</small></li>
+            <li>{{ u.username }} <small>({{ u.email }})</small></li>
             {% else %}
             <li>No hay usuarios</li>
             {% endfor %}
@@ -15,8 +15,7 @@
         <h3>Incidentes recientes</h3>
         <ul>
             {% for i in incidents %}
-            <li><a href="{{ url_for('admin.incidents_view', id=i._id) }}">{{ i.title }}</a> <small>{{ i.severity
-                    }}</small></li>
+            <li>{{ i.title }} ➡ Severidad: {{ i.severity}}</li>
             {% else %}
             <li>No hay incidentes</li>
             {% endfor %}
@@ -26,7 +25,7 @@
         <h3>Últimas auditorías</h3>
         <ul>
             {% for a in audits %}
-            <li>{{ a.actor }} - {{ a.action }} <small>{{ a.timestamp }}</small></li>
+            <li>{{ a.actor }} ➡ {{ a.action }} ➡ {{ a.timestamp }}</li>
             {% else %}
             <li>No hay auditorías</li>
             {% endfor %}
