--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -14,11 +14,17 @@
         <img src="{{ url_for('static', filename='img/logo.png') }}" alt="Logo" class="logo">
         <nav>
             {% if current_user.is_authenticated %}
+            {% if current_user.role == 'admin' %}
             <a href="{{ url_for('admin.dashboard') }}">Ir al panel</a>
+            {% elif current_user.role == 'analyst' %}
+            <a href="{{ url_for('analyst.dashboard') }}">Ir al panel</a>
+            {% else %}
+            <a href="{{ url_for('user.dashboard') }}">Ir al panel</a>
+            {% endif %}
             <a href="{{ url_for('auth.logout') }}">Cerrar sesión</a>
             {% else %}
-            <a href="{{ url_for('auth.login') }}">Iniciar Sesión</a>
-            <a href="{{ url_for('auth.register') }}">Registrarse</a>
+                <a href="{{ url_for('auth.login') }}">Iniciar Sesión</a>
+                <a href="{{ url_for('auth.register') }}">Registrarse</a>
             {% endif %}
         </nav>
     </header>
@@ -30,7 +36,13 @@
             {% if not current_user.is_authenticated %}
             <a href="{{ url_for('auth.login') }}" class="btn">Comenzar</a>
             {% else %}
+            {% if current_user.role == 'admin' %}
             <a href="{{ url_for('admin.dashboard') }}" class="btn">Panel</a>
+            {% elif current_user.role == 'analyst' %}
+            <a href="{{ url_for('analyst.dashboard') }}" class="btn">Panel</a>
+            {% else %}
+            <a href="{{ url_for('user.dashboard') }}" class="btn">Panel</a>
+            {% endif %}
             {% endif %}
         </section>
 
