--- a/app/templates/user/base.html
+++ b/app/templates/user/base.html
@@ -2,40 +2,42 @@
 <html lang="es">
 
 <head>
-    <meta charset="utf-8">
-    <title>CyberShield | Admin</title>
+    <meta charset="UTF-8">
+    <title>CyberShield | Usuario</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/admin.css') }}">
     <link rel="shortcut icon" href="{{ url_for('static', filename='img/logo.png') }}">
 </head>
 
 <body>
+
     <aside class="admin-sidebar">
         <div class="brand">
             <img src="{{ url_for('static', filename='img/logo.png') }}" alt="logo">
             <h3>CyberShield</h3>
         </div>
-        <nav class="admin-nav">
-            <a href="{{ url_for('admin.dashboard') }}">Panel</a>
-            <a href="{{ url_for('admin.users') }}">Usuarios</a>
-            <a href="{{ url_for('admin.incidents') }}">Incidentes</a>
-            <a href="{{ url_for('admin.evidences') }}">Evidencias</a>
-            <a href="{{ url_for('admin.audits') }}">Auditorías</a>
+        <nav>
+            <a href="{{ url_for('user.dashboard') }}">Mis incidentes</a>
+            <a href="{{ url_for('user.incident_new') }}">Reportar incidente</a>
         </nav>
-        <a href="{{ url_for('main.home')}}"><button class="btn-primary logout">Ir al inicio</button></a>
-        <a href="{{ url_for('auth.logout')}}"><button class="btn-primary logout" onclick="return(confirm('¿Deseas cerrar sesión?'))">Cerrar sesión</button></a>
+        <div class="admin-logout">
+            <a href="{{ url_for('main.home')}}"><button class="btn-primary logout">Ir al inicio</button></a>
+            <a href="{{ url_for('auth.logout')}}"><button class="btn-primary logout"
+                    onclick="return(confirm('¿Deseas cerrar sesión?'))">Cerrar sesión</button></a>
+        </div>
     </aside>
 
     <main class="admin-main">
         <header class="admin-header">
-            <h2>{{ title if title else "Panel de administración" }}</h2>
+            <h2>{{ title if title else "Panel de Usuario" }}</h2>
+            <div class="user-info">{{ current_user.username }}</div>
         </header>
 
         <section class="admin-content">
             {% with messages = get_flashed_messages(with_categories=true) %}
             {% if messages %}
             <div class="flash-list">
-                {% for cat, msg in messages %}
-                <div class="flash {{ cat }}">{{ msg }}</div>
+                {% for category, message in messages %}
+                <div class="flash {{ category }}">{{ message }}</div>
                 {% endfor %}
             </div>
             {% endif %}
@@ -44,6 +46,7 @@
             {% block content %}{% endblock %}
         </section>
     </main>
+
 </body>
 
 </html>
